# goit-web-hw-10

./: .dockerignore  .gitignore  Dockerfile  README.md  app.py  pyproject.toml
dev_tools/: check.py  create_project_tree.py  migrate_contacts.py
src/bot_assistant/: main.py
src/bot_assistant/data/: addressbook.pkl  addressbook_bak.pkl  addressbook_bak_migrate.pkl  country_codes.csv
src/bot_assistant/handlers/: commands.py
src/bot_assistant/models/: address_book.py  fields.py  record.py
src/bot_assistant/utils/: backup.py  config.py  decorators.py  input_validators.py  lang.py  logger.py  path_config.py  phone_utils.py  pyproject.toml  region.py  translate.py
src/bot_assistant/views/: abstract_view.py  console_view.py
